--- a/.github/workflows/daily-outreach.yml
+++ b/.github/workflows/daily-outreach.yml
@@ -33,6 +33,6 @@ jobs:
         run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-          git add tools/output/sent_emails.json tools/output/daily_logs/
+          git add tools/output/ || true
           git diff --staged --quiet || git commit -m "Update outreach sent log [skip ci]"
-          git push
+          git push || true
